substrate/primitives/runtime-interface/tests/ui/pass_by_enum_with_struct.stderr
error: `PassByEnum` only supports enums as input type.
  --> tests/ui/pass_by_enum_with_struct.rs:20:10
   |
20 | #[derive(PassByEnum)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `PassByEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
